force-app/main/default/objects/Product_Launch_Roles__c/Product_Launch_Roles__c.object-meta.xml
<CustomObject>
    <description>Relationship between Opportunity Contact Roles and Product Launch contact records to provide many to many relationship</description>
    <label>Product Launch Roles</label>
    <nameField>
        <displayFormat>PLR-{000000}</displayFormat>
        <label>Product Launch Roles Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Launch Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>