force-app/main/default/objects/Product_Launch_Roles__c/fields/Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>