force-app/main/default/objects/Product_Launch_Roles__c/fields/Launch_Role__c.field-meta.xml
<CustomField>
    <fullName>Launch_Role__c</fullName>
    <description>mapped from Opp Contact role</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Launch Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>