force-app/main/default/objects/Product_Launch_Roles__c/fields/Launch_Role_Pick__c.field-meta.xml
<CustomField>
    <fullName>Launch_Role_Pick__c</fullName>
    <label>Launch Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Primary Facility Contact</fullName>
            </value>
            <value>
                <fullName>Primary Office Contact</fullName>
            </value>
            <value>
                <fullName>ROSA Champion Surgeon</fullName>
            </value>
            <value>
                <fullName>ROSA Distributor/GM</fullName>
            </value>
            <value>
                <fullName>ROSA Distributor Ops Manager</fullName>
            </value>
            <value>
                <fullName>ROSA Fellow</fullName>
            </value>
            <value>
                <fullName>ROSA OR Director</fullName>
            </value>
            <value>
                <fullName>ROSA Ortho Coordinator</fullName>
            </value>
            <value>
                <fullName>ROSA PDA</fullName>
            </value>
            <value>
                <fullName>ROSA PDM</fullName>
            </value>
            <value>
                <fullName>ROSA PDM Lead</fullName>
            </value>
            <value>
                <fullName>ROSA Recon Account Lead</fullName>
            </value>
            <value>
                <fullName>ROSA Recon Associate</fullName>
            </value>
            <value>
                <fullName>ROSA Recon Representative</fullName>
            </value>
            <value>
                <fullName>ROSA Recon ROSA Lead</fullName>
            </value>
            <value>
                <fullName>ROSA Recon Team Leader</fullName>
            </value>
            <value>
                <fullName>ROSA Resident</fullName>
            </value>
            <value>
                <fullName>ROSA SPD Director</fullName>
            </value>
            <value>
                <fullName>ROSA Surgeon</fullName>
            </value>
            <value>
                <fullName>Surgeon</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>