force-app/main/default/objects/Product_Launch_Roles__c/fields/Product_Launch__c.field-meta.xml
<CustomField>
    <fullName>Product_Launch__c</fullName>
    <label>Product Launch</label>
    <referenceTo>Product_Launch__c</referenceTo>
    <relationshipLabel>Product Launch Contacts</relationshipLabel>
    <relationshipName>Product_Launch_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>