force-app/main/default/objects/Product_Launch_Roles__c/fields/Project_Launch_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Launch_Name__c</fullName>
    <formula>Product_Launch__r.Product_Launch_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Launch Name</label>
    <type>Text</type>
</CustomField>