force-app/main/default/objects/Product_Launch_Roles__c/recordTypes/MIS.recordType-meta.xml
<RecordType>
    <fullName>MIS</fullName>
    <active>true</active>
    <description>Product Launch Roles for MIS Product Launches</description>
    <label>MIS</label>
</RecordType>