force-app/main/default/objects/Product_Launch_Roles__c/recordTypes/ROSA.recordType-meta.xml
<RecordType>
    <fullName>ROSA</fullName>
    <active>true</active>
    <description>Product Launch role for ROSA records</description>
    <label>ROSA</label>
</RecordType>